--- a/chat/templates/sala.html
+++ b/chat/templates/sala.html
@@ -43,7 +43,7 @@
         document.querySelector('#botao').onclick = function(e){
             var mensagemInput = document.querySelector('#texto');
             var mensagem = mensagemInput.value;
-            chatSocket.send(JSON.stringfy({
+            chatSocket.send(JSON.stringify({
                 'mensagem' = mensagem
             }));
             mensagemInput.value = '';
